take a stab at adding redundancy and mirroring, refactor frames and pointers, lock frames, and enable iterative retrieval
