# lib/server/routes/buckets.js
@@ -9,6 +9,7 @@ const merge = require('merge');
 const errors = require('../errors');
 const Router = require('./index');
 const inherits = require('util').inherits;
+const ms = require('ms');
 
 /**
  * Handles endpoints for all bucket and file related operations
@@ -284,6 +285,7 @@ BucketsRouter.prototype.createBucketToken = function(req, res, next) {
  * @param {Function} next
  */
 BucketsRouter.prototype.createEntryFromFrame = function(req, res, next) {
+  const self = this;
   const Frame = this.storage.models.Frame;
   const Bucket = this.storage.models.Bucket;
   const BucketEntry = this.storage.models.BucketEntry;
@@ -312,6 +314,10 @@ BucketsRouter.prototype.createEntryFromFrame = function(req, res, next) {
         return next(new errors.NotFoundError('Frame not found'));
       }
 
+      if (frame.locked) {
+        return next(new errors.BadRequestError('Frame is already locked'));
+      }
+
       let entry = new BucketEntry({
         bucket: bucket._id,
         frame: frame._id,
@@ -324,10 +330,136 @@ BucketsRouter.prototype.createEntryFromFrame = function(req, res, next) {
           return next(new errors.InternalError(err.message));
         }
 
-        res.send(merge(entry.toObject(), { size: frame.size }));
+        frame.lock(function(err) {
+          if (err) {
+            return next(new errors.InternalError(err));
+          }
+
+          res.send(merge(entry.toObject(), { size: frame.size }));
+          self._replicateFrameToMirrors(frame);
+        });
       });
     });
   });
+};
+
+/**
+ * Replicates the pointers in the given frame to mirror nodes
+ * @private
+ * @param {Frame} frame - The frame to replicate
+ */
+BucketsRouter.prototype._replicateFrameToMirrors = function(frame) {
+  const self = this;
+  const network = this.network;
+  const Pointer = this.storage.models.Pointer;
+  const Contact = this.storage.models.Contact;
+
+  var mirrors = [];
+
+  function _createContractFromPointer(id, next) {
+    Pointer.findOne({ _id: id }, function(err, pointer) {
+      if (err) {
+        log.error('Failed to load pointer for replication: %s', err.message);
+        return next(err);
+      }
+
+      let contract = new storj.Contract({
+        data_size: pointer.size,
+        data_hash: pointer.hash,
+        store_begin: Date.now(),
+        store_end: Date.now() + ms('90d'),
+        audit_count: pointer.challenges.length
+      });
+
+      next(null, contract);
+    });
+  }
+
+  function _getMirroringContract(contract, n, next) {
+    network._manager.load(contract.get('data_hash'), function(err, item) {
+      if (err) {
+        return next(err);
+      }
+
+      Contact.findOne({
+        _id: Object.keys(item.contracts)[0]
+      }, function(err, contact) {
+        if (err) {
+          return next(err);
+        }
+
+        if (!contact) {
+          return next(new Error('Contact not found'));
+        }
+
+        let farmer = storj.Contact(contact);
+
+        network.getStorageOffer(contract, function(mirror, contract) {
+          item.contracts[mirror.nodeID] = contract;
+
+          network._manager.save(item, function(err) {
+            if (err) {
+              return next(err);
+            }
+
+            network.getRetrieveToken(farmer, contract, function(err, token) {
+              if (err) {
+                return next(err);
+              }
+
+              mirrors.push(mirror);
+              next(null, new storj.DataChannelPointer(
+                farmer,
+                contract.get('data_hash'),
+                token
+              ));
+            });
+          });
+        });
+      });
+    });
+  }
+
+  function _replicateShard(contract, next) {
+    async.timesSeries(
+      self.config.application.mirrors,
+      _getMirroringContract.bind(contract),
+      function(err, sources) {
+        if (err) {
+          log.error(err);
+          return next();
+        }
+
+        network.getMirrorNodes(sources, mirrors, function(err, completed) {
+          if (err) {
+            log.error('Failed to replicate to all mirrors');
+            return next();
+          }
+
+          log.info('Replicated to %s mirrors', completed.length);
+          next();
+        });
+      }
+    );
+  }
+
+  async.mapSeries(
+    frame.shards,
+    _createContractFromPointer,
+    function(err, contracts) {
+      if (err) {
+        return log.error(err.message);
+      }
+
+      async.eachSeries(contracts, _replicateShard, function(err) {
+        if (err) {
+          return log.error(err.message);
+        }
+
+        log.info('Successfully replicated frame %s', frame.id);
+      });
+    }
+  );
 };
 
 /**
@@ -341,6 +473,7 @@ BucketsRouter.prototype.getFile = function(req, res, next) {
   const Bucket = this.storage.models.Bucket;
   const BucketEntry = this.storage.models.BucketEntry;
   const Contact = this.storage.models.Contact;
+  const Pointer = this.storage.models.Pointer;
 
   function getRetrievalToken(shard, callback) {
     self.network._manager.load(shard.hash, function(err, item) {
@@ -348,7 +481,11 @@ BucketsRouter.prototype.getFile = function(req, res, next) {
         return callback(err);
       }
 
-      let farmers = Object.keys(item.contracts);
+      let farmers = Object.keys(item.contracts).filter(function(nodeID) {
+        return (
+          req.query.exclude ? req.query.exclude.split(',') : []
+        ).indexOf(nodeID) === -1;
+      });
       let token = null;
 
       function test() {
@@ -433,14 +570,24 @@ BucketsRouter.prototype.getFile = function(req, res, next) {
         return next(new errors.NotFoundError('File not found'));
       }
 
-      async.map(entry.frame.shards.sort(function(a, b) {
-        return a.index - b.index;
-      }), getRetrievalToken, function(err, results) {
+      let pQuery = {};
+      let pSkip = Number(req.query.skip) || 0;
+      let pLimit = Number(req.query.limit) || 6;
+      let pSort = { index: 1 };
+      let cursor = Pointer.find(pQuery).skip(pSkip).limit(pLimit).sort(pSort);
+
+      cursor.exec(function(err, pointers) {
         if (err) {
-          return next(new errors.InternalError(err.message));
+          return next(new errors.InternalError(err));
         }
 
-        res.send(results);
+        async.map(pointers, getRetrievalToken, function(err, results) {
+          if (err) {
+            return next(new errors.InternalError(err.message));
+          }
+
+          res.send(results);
+        });
       });
     });
   });
